--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.07 01:10:11<br />
+<b>start</b> - 2023.03.08 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -34.0<br />
+Hungary_VotiveChurch, not updated, -33.44000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -21,7 +21,7 @@ USA_JewelJack-o-Lantern, not updated, 0.7490636704119851<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.35273368606702604<br />
 UnitedKingdom_LFCBebington, not updated, 0.9667024704618719<br />
 Finland_Nurmijarvi, not updated, 0.0<br />
-Finland_Hyvinkaa, not updated, 0.0<br />
+Finland_Hyvinkaa, not updated, 0.14999999999999147<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
@@ -50,7 +50,7 @@ Lithuania_KaunasBasketball, not updated, 0.7000000000000028<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
 Belgium_KnokkeHeist, not updated, 0.75<br />
-Hungary_Evolution, <b>updated</b>, 758, <a href="https://www.munzee.com/map/u2nr562g8/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Evolution.json" target="_blank">json</a><br />
+Hungary_Evolution, not updated, 0.0<br />
 Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
@@ -232,7 +232,7 @@ Hungary_Honey kihagyva (100%), <br />
 Hungary_QR kihagyva (100%), <br />
 Hungary_DebreceniKereszt kihagyva (100%), <br />
 Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.240000000000002<br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.28000000000000114<br />
 UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
 UnitedKingdom_JustSmileLondon, not updated, 1.0<br />
 UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
@@ -558,7 +558,7 @@ USA_CRJonesParkBirthday7 kihagyva (100%), <br />
 USA_NoelridgeMystery kihagyva (100%), <br />
 USA_WestDesMoinesStrawberry, not updated, 0.0<br />
 USA_WestDesMoinesShark, not updated, 0.0<br />
-USA_AltoonaEvos, <b>updated</b>, 99, <a href="https://www.munzee.com/map/9zmsbkdmd/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AltoonaEvos.json" target="_blank">json</a><br />
+USA_AltoonaEvos, not updated, 0.0<br />
 USA_DSMHalloweenWitch, not updated, 0.0<br />
 USA_CRFrankenstein, not updated, 0.9099999999999966<br />
 USA_ThomasParkFlats kihagyva (100%), <br />
@@ -848,16 +848,16 @@ USA_NoelridgeMysteryFlats kihagyva (100%), <br />
 USA_GSouthland, not updated, 0.1999999999999993<br />
 USA_GMorning, not updated, 0.39000000000000057<br />
 USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.3200000000000003<br />
+USA_GGamingTable, not updated, 0.4299999999999997<br />
 USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.10999999999999943<br />
+USA_OwensboroRiverboat, not updated, 0.14000000000000057<br />
 USA_OwensboroRiverboatFlats, not updated, 0.7199999999999998<br />
 Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, <b>updated</b>, 373, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a> <b>100%</b><br />
+USA_PotOZees kihagyva (100%), <br />
 USA_MaineWeatherBalloon, not updated, 0.0<br />
 USA_HappyHoliday20, not updated, 0.0<br />
 USA_HazardSpurCampton, not updated, 0.0<br />
@@ -870,7 +870,7 @@ USA_ConcordHearts kihagyva (100%), <br />
 USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.7999999999999972<br />
-USA_CelticKnot, not updated, 0.5899999999999963<br />
+USA_CelticKnot, not updated, 0.7399999999999949<br />
 USA_STLPirateShip, not updated, 0.37999999999999545<br />
 USA_BluesMunzee, not updated, 0.0<br />
 USA_HowellViking, not updated, 0.0<br />
@@ -907,7 +907,7 @@ USA_Munzee11 kihagyva (100%), <br />
 UnitedKingdom_HeartBeatz kihagyva (100%), <br />
 USA_Scooter kihagyva (100%), <br />
 USA_YanktonIceCream kihagyva (100%), <br />
-UnitedKingdom_FlatsHideNSeek, <b>updated</b>, 413, <a href="https://www.munzee.com/map/gcn8wmup6/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FlatsHideNSeek.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
 Australia_BendigoIcyPole kihagyva (100%), <br />
 USA_SouthPadreIslandKOA, not updated, 0.0<br />
 USA_HeartOfStCharles kihagyva (100%), <br />
@@ -919,7 +919,7 @@ USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
 USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
 USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
 USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat, <b>updated</b>, 257, <a href="https://www.munzee.com/map/u1231n464/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TiffyTheNewmarketTabbyCat.json" target="_blank">json</a><br />
+UnitedKingdom_TiffyTheNewmarketTabbyCat, not updated, 0.7999999999999972<br />
 USA_GentleDoctorAnimals kihagyva (100%), <br />
 USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
 USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
@@ -990,15 +990,5 @@ USA_Friendship kihagyva (100%), <br />
 USA_HappyKrautMemorial kihagyva (100%), <br />
 USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Hungary_city_Szeged, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr55dy9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Szeged.json" target="_blank">json</a><br />
-UnitedKingdom_city_Bournemouth, <b>updated</b>, <a href="https://www.munzee.com/map/gcn8sbhwp/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_Bournemouth.json" target="_blank">json</a><br />
-----felhasználók<br />
-BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-llamah_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zmk6nyww/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/llamah_empty.json" target="_blank">json</a><br />
-PeachesnCream_empty, <b>updated</b>, <a href="https://www.munzee.com/map/9zmk6hw2m/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/PeachesnCream_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.03.07 02:15:37<br />
-összesen 3925<br />
+<b>stop</b> - 2023.03.08 01:41:43<br />
+összesen 1890<br />
