--- a/feladat.html
+++ b/feladat.html
@@ -452,3 +452,7 @@ Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
 Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
 Lithuania_KaunasScatter1 kihagyva (100%), <br />
 Lithuania_KaunasScatter2, <b>updated</b>, 127, <a href="https://www.munzee.com/map/u9c03wx5s/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasScatter2.json" target="_blank">json</a><br />
+Lithuania_KaunasLightning, not updated, 0.0<br />
+Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
+Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
+Lithuania_KaunasMagnet, <b>updated</b>, 280, <a href="https://www.munzee.com/map/u9c03t0v3/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasMagnet.json" target="_blank">json</a><br />
