--- a/feladat.html
+++ b/feladat.html
@@ -789,3 +789,134 @@ USA_TCUHornedFrogs, not updated, 0.0<br />
 USA_GeowoodstockXVIITexas, not updated, 0.0<br />
 USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
 USA_TigerKing, <b>updated</b>, 310, <a href="https://www.munzee.com/map/9vfcfhj93/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TigerKing.json" target="_blank">json</a><br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, not updated, 0.4700000000000024<br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, not updated, 1.0<br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.0<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret kihagyva (100%), <br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.9000000000000057<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.3500000000000014<br />
+USA_GPumpkin kihagyva (100%), <br />
+USA_GPumpkinFlats, not updated, 0.0<br />
+USA_Mauhaus kihagyva (100%), <br />
+USA_GToyotaCrossbows, not updated, 0.0<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
+USA_GToyota kihagyva (100%), <br />
+USA_GToyotaFlats, not updated, 0.9699999999999989<br />
+USA_GJewelBelt, not updated, 0.20999999999999375<br />
+USA_GEvoBelt, not updated, 0.3400000000000034<br />
+USA_GBypassMixed kihagyva (100%), <br />
+USA_G62WestEvo, not updated, 0.33000000000000007<br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.39000000000000057<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.4299999999999997<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.35999999999999943<br />
+USA_OwensboroRiverboatFlats, not updated, 0.7199999999999998<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, not updated, 0.0<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees kihagyva (100%), <br />
+USA_MaineWeatherBalloon, not updated, 0.0<br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, not updated, 0.7999999999999972<br />
+USA_CelticKnot, not updated, 0.8900000000000006<br />
+USA_STLPirateShip, not updated, 0.37999999999999545<br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.0<br />
+USA_STLPokeball, not updated, 0.6000000000000014<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, not updated, 0.8399999999999963<br />
+USA_KirkwoodEvolutions6 kihagyva (100%), <br />
+USA_KirkwoodEvolutions7, not updated, 0.0<br />
+USA_Woodpecker, not updated, 0.0<br />
+USA_ZBriefcase kihagyva (100%), <br />
+USA_WinterCardinalFeather kihagyva (100%), <br />
+USA_Chickadee kihagyva (100%), <br />
+USA_FlatDogBone kihagyva (100%), <br />
+USA_NyisutterBday kihagyva (100%), <br />
+USA_Cornucopia kihagyva (100%), <br />
+USA_StLouisRobin kihagyva (100%), <br />
+USA_FriendshipFliHiBrewery kihagyva (100%), <br />
+USA_SummerTree kihagyva (100%), <br />
+USA_ZeeSpyHat kihagyva (100%), <br />
+USA_WYMM kihagyva (100%), <br />
+USA_FlatObjectAnnex, not updated, 0.0<br />
+USA_StLFlatRob, not updated, 0.0<br />
+USA_StLFlatRobFlats kihagyva (100%), <br />
+USA_CottlevillePost kihagyva (100%), <br />
+USA_DaisyChain kihagyva (100%), <br />
+USA_TowerGrovePark kihagyva (100%), <br />
+USA_PiratesCannon kihagyva (100%), <br />
+USA_MothersDayBasket kihagyva (100%), <br />
+USA_Munzee11 kihagyva (100%), <br />
+UnitedKingdom_HeartBeatz kihagyva (100%), <br />
+USA_Scooter kihagyva (100%), <br />
+USA_YanktonIceCream kihagyva (100%), <br />
+UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
+Australia_BendigoIcyPole kihagyva (100%), <br />
+USA_SouthPadreIslandKOA, not updated, 0.0<br />
+USA_HeartOfStCharles kihagyva (100%), <br />
+USA_ShawsGardenRose kihagyva (100%), <br />
+USA_WhiteCastleValentine kihagyva (100%), <br />
+USA_Ring kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
+USA_CampingAtTheLake kihagyva (100%), <br />
+UnitedKingdom_TiffyTheNewmarketTabbyCat, <b>updated</b>, 262, <a href="https://www.munzee.com/map/u1231n464/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TiffyTheNewmarketTabbyCat.json" target="_blank">json</a><br />
