--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.10 01:10:09<br />
+<b>start</b> - 2023.03.11 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -33.53<br />
+Hungary_VotiveChurch, not updated, -33.400000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.39000000000000057<br />
+USA_LighteksMinnesotaWild, not updated, 0.46999999999999886<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -451,11 +451,11 @@ Austria_FrauenkirchenOwl, not updated, 0.0<br />
 Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
 Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
 Lithuania_KaunasScatter1 kihagyva (100%), <br />
-Lithuania_KaunasScatter2, <b>updated</b>, 127, <a href="https://www.munzee.com/map/u9c03wx5s/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasScatter2.json" target="_blank">json</a><br />
+Lithuania_KaunasScatter2, not updated, 0.0<br />
 Lithuania_KaunasLightning, not updated, 0.0<br />
 Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
 Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
-Lithuania_KaunasMagnet, <b>updated</b>, 280, <a href="https://www.munzee.com/map/u9c03t0v3/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_KaunasMagnet.json" target="_blank">json</a><br />
+Lithuania_KaunasMagnet, not updated, 0.0<br />
 Lithuania_FebruaryEvent, not updated, 0.0<br />
 USA_TheLuckyFungi kihagyva (100%), <br />
 USA_SunAndMoon, not updated, 0.0<br />
@@ -586,7 +586,7 @@ USA_ComoParkShamrockBlue, not updated, 0.0<br />
 USA_StPaulShamrock kihagyva (100%), <br />
 USA_BirthdayClown kihagyva (100%), <br />
 USA_LongLakeButterflies kihagyva (100%), <br />
-USA_FleurDeLis, not updated, 0.0<br />
+USA_FleurDeLis, <b>hiba</b> a táblázat megnyitásakor, RESOURCE_EXHAUSTED, 32<br />
 USA_HutchinsonSnowflake kihagyva (100%), <br />
 USA_RochestersCornWaterTower, not updated, 0.0<br />
 USA_DuluthAnchor kihagyva (100%), <br />
@@ -787,8 +787,8 @@ USA_MysteryMachine, not updated, 0.0<br />
 USA_FortWorthFighterJet, not updated, 0.0<br />
 USA_TCUHornedFrogs, not updated, 0.0<br />
 USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, <b>updated</b>, 310, <a href="https://www.munzee.com/map/9vfcfhj93/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TigerKing.json" target="_blank">json</a><br />
+USA_FortWorthRootinTootinMunzeeCow, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_TigerKing, not updated, 0.0<br />
 USA_TexasGeowoodstock2019 kihagyva (100%), <br />
 USA_FortWorthSucculents kihagyva (100%), <br />
 USA_RobVsMatt, not updated, 0.0<br />
@@ -853,148 +853,9 @@ USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.35999999999999943<br />
 USA_OwensboroRiverboatFlats, not updated, 0.7199999999999998<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
 USA_PotOZees kihagyva (100%), <br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.7999999999999972<br />
-USA_CelticKnot, not updated, 0.8900000000000006<br />
-USA_STLPirateShip, not updated, 0.37999999999999545<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.0<br />
-USA_STLPokeball, not updated, 0.6000000000000014<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.8399999999999963<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.0<br />
-USA_Woodpecker, not updated, 0.0<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-USA_YanktonIceCream kihagyva (100%), <br />
-UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
-Australia_BendigoIcyPole kihagyva (100%), <br />
-USA_SouthPadreIslandKOA, not updated, 0.0<br />
-USA_HeartOfStCharles kihagyva (100%), <br />
-USA_ShawsGardenRose kihagyva (100%), <br />
-USA_WhiteCastleValentine kihagyva (100%), <br />
-USA_Ring kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
-USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat, <b>updated</b>, 262, <a href="https://www.munzee.com/map/u1231n464/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TiffyTheNewmarketTabbyCat.json" target="_blank">json</a><br />
-USA_GentleDoctorAnimals kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
-USA_BreadCo kihagyva (100%), <br />
-USA_Swon kihagyva (100%), <br />
-USA_ThankYouTruckers kihagyva (100%), <br />
-USA_CherryMini kihagyva (100%), <br />
-USA_BlossomMini kihagyva (100%), <br />
-USA_MarchMini kihagyva (100%), <br />
-USA_PiDay2022 kihagyva (100%), <br />
-USA_SpringTree kihagyva (100%), <br />
-USA_HeavySmokeBBQ kihagyva (100%), <br />
-USA_BowleroLaserTag kihagyva (100%), <br />
-USA_BohrerPark kihagyva (100%), <br />
-USA_Snowflake kihagyva (100%), <br />
-USA_WebsterGrovesStatesmen kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesVirtuals kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesFlats kihagyva (100%), <br />
-USA_WinterTree kihagyva (100%), <br />
-USA_AutumnTree kihagyva (100%), <br />
-USA_ZeeOps kihagyva (100%), <br />
-USA_StPetersChess kihagyva (100%), <br />
-USA_PiratesRum kihagyva (100%), <br />
-USA_NobHillFishTank kihagyva (100%), <br />
-USA_ChristmasSleigh kihagyva (100%), <br />
-USA_StLouisChristmasStockingVirtual kihagyva (100%), <br />
-USA_StLouisChristmasStockingFlat kihagyva (100%), <br />
-USA_JimmyBeagle kihagyva (100%), <br />
-USA_PirateAxe kihagyva (100%), <br />
-USA_ShamrocksMug kihagyva (100%), <br />
-USA_Halloween kihagyva (100%), <br />
-USA_AutumnMoon kihagyva (100%), <br />
-USA_Rosesquirrel kihagyva (100%), <br />
-USA_Campfire kihagyva (100%), <br />
-USA_GiftOfLife kihagyva (100%), <br />
-USA_PirateLongsword kihagyva (100%), <br />
-USA_WarriorSpear kihagyva (100%), <br />
-USA_PizzaOnTheHill kihagyva (100%), <br />
-USA_StLouisFlamingo kihagyva (100%), <br />
-USA_PirateCrossbow kihagyva (100%), <br />
-USA_Munzee10 kihagyva (100%), <br />
-USA_SybergsShark kihagyva (100%), <br />
-USA_ChuckECheesePizza kihagyva (100%), <br />
-USA_9Mile kihagyva (100%), <br />
-USA_MothersDayFlowerPot kihagyva (100%), <br />
-USA_TurtlePark kihagyva (100%), <br />
-USA_StacyParkFlower kihagyva (100%), <br />
-USA_CottlevilleDragonfly kihagyva (100%), <br />
-USA_SchaeferParkBugs kihagyva (100%), <br />
-USA_StLouisCardinalsPart2, not updated, 0.0<br />
-USA_TattooedDog kihagyva (100%), <br />
-USA_TiemeyerPatch kihagyva (100%), <br />
-USA_CincoDeMayoTaco kihagyva (100%), <br />
-USA_OverlandCar kihagyva (100%), <br />
-USA_FriscoTrain kihagyva (100%), <br />
-USA_StLouisAirplane kihagyva (100%), <br />
-USA_PiDayPie kihagyva (100%), <br />
-USA_AfftonHorse kihagyva (100%), <br />
-USA_KirkwoodAnchor kihagyva (100%), <br />
-USA_WalpelhorstHorse kihagyva (100%), <br />
-USA_StCharlesAnchor kihagyva (100%), <br />
-USA_Birdhouse kihagyva (100%), <br />
-USA_Cardinals kihagyva (100%), <br />
-USA_FlatFriends kihagyva (100%), <br />
-USA_FlatLouInStLou kihagyva (100%), <br />
-USA_FlatLouInStLouPink, not updated, 0.0<br />
-USA_Friendship kihagyva (100%), <br />
-USA_HappyKrautMemorial kihagyva (100%), <br />
-USA_OFallonSoccer kihagyva (100%), <br />
-USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Lithuania_city_Kaunas, <b>updated</b>, <a href="https://www.munzee.com/map/u9c03t0v3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Kaunas.json" target="_blank">json</a><br />
-USA_city_FortWorth, <b>updated</b>, <a href="https://www.munzee.com/map/9vf9znt4b/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_FortWorth.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.03.10 01:59:16<br />
-összesen 2946<br />
+USA_MaineWeatherBalloon, <b>updated</b>, 64, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
