--- a/feladat.html
+++ b/feladat.html
@@ -859,3 +859,14 @@ USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
 USA_PotOZees kihagyva (100%), <br />
 USA_MaineWeatherBalloon, <b>updated</b>, 64, <a href="https://www.munzee.com/map/dryg6gxs7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MaineWeatherBalloon.json" target="_blank">json</a><br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
