--- a/feladat.html
+++ b/feladat.html
@@ -870,3 +870,4 @@ USA_ConcordHearts kihagyva (100%), <br />
 USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
+USA_CelticKnot, <b>updated</b>, 379, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
