--- a/feladat.html
+++ b/feladat.html
@@ -870,3 +870,5 @@ USA_ConcordHearts kihagyva (100%), <br />
 USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, <b>updated</b>, 79, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
+USA_CelticKnot, not updated, 0.8999999999999986<br />
+USA_STLPirateShip, <b>updated</b>, 220, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
