--- a/feladat.html
+++ b/feladat.html
@@ -872,3 +872,12 @@ USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, <b>updated</b>, 79, <a href="https://www.munzee.com/map/9yzsuf5pu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FoxHillFit.json" target="_blank">json</a><br />
 USA_CelticKnot, not updated, 0.8999999999999986<br />
 USA_STLPirateShip, <b>updated</b>, 220, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.0<br />
+USA_STLPokeball, not updated, 0.6000000000000014<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, <b>updated</b>, 143, <a href="https://www.munzee.com/map/9yzewbe6d/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodEvolutions5.json" target="_blank">json</a><br />
