--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.16 01:10:12<br />
+<b>start</b> - 2023.03.17 01:10:12<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -33.400000000000006<br />
+Hungary_VotiveChurch, not updated, -34.0<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.9661835748792278<br />
-USA_Turtle, not updated, 0.17636684303350592<br />
+USA_Turtle, not updated, 0.264550264550266<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.8800000000000097<br />
 Lithuania_KaunasBasketball, not updated, 0.7000000000000028<br />
@@ -145,7 +145,7 @@ USA_RobHeartsLou1 kihagyva (100%), <br />
 USA_RobHeartsLou2 kihagyva (100%), <br />
 USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+UnitedKingdom_TadleyJoyCon, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 48<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle kihagyva (100%), <br />
@@ -466,7 +466,7 @@ Australia_FairyWren kihagyva (100%), <br />
 Germany_BerlinCardsPin kihagyva (100%), <br />
 Germany_Pretzel kihagyva (100%), <br />
 Germany_AdventurePortal2, not updated, 1.0<br />
-Germany_BerlinVoidMapleChess, not updated, 0.0<br />
+Germany_BerlinVoidMapleChess, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 128<br />
 Germany_SweetHeart kihagyva (100%), <br />
 Germany_WittenauerMischMasch, not updated, 0.269999999999996<br />
 Germany_BerlinBYOG2020 kihagyva (100%), <br />
@@ -851,7 +851,7 @@ USA_GCHampionWay, not updated, 0.0<br />
 USA_GGamingTable, not updated, 0.5300000000000011<br />
 USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.46999999999999886<br />
+USA_OwensboroRiverboat, not updated, 0.5300000000000011<br />
 USA_OwensboroRiverboatFlats, not updated, 0.7199999999999998<br />
 Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
@@ -919,7 +919,7 @@ USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
 USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
 USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
 USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat, <b>updated</b>, 256, <a href="https://www.munzee.com/map/u1231n464/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TiffyTheNewmarketTabbyCat.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_TiffyTheNewmarketTabbyCat kihagyva (100%), <br />
 USA_GentleDoctorAnimals kihagyva (100%), <br />
 USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
 USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
@@ -990,12 +990,5 @@ USA_Friendship kihagyva (100%), <br />
 USA_HappyKrautMemorial kihagyva (100%), <br />
 USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-----felhasználók<br />
-Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
-Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.03.16 01:47:56<br />
-összesen 2263<br />
+<b>stop</b> - 2023.03.17 01:47:05<br />
+összesen 2213<br />
