--- a/feladat.html
+++ b/feladat.html
@@ -872,3 +872,15 @@ USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.0<br />
 USA_CelticKnot, not updated, 0.14999999999999858<br />
 USA_STLPirateShip, <b>updated</b>, 214, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.0<br />
+USA_STLPokeball, not updated, 0.6000000000000014<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, not updated, 0.0<br />
+USA_KirkwoodEvolutions6 kihagyva (100%), <br />
+USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
+USA_Woodpecker, <b>updated</b>, 194, <a href="https://www.munzee.com/map/9yzep995f/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Woodpecker.json" target="_blank">json</a><br />
