--- a/feladat.html
+++ b/feladat.html
@@ -841,3 +841,33 @@ USA_GToyotaCrossbowsBiggy, not updated, 0.9199999999999875<br />
 USA_GToyota kihagyva (100%), <br />
 USA_GToyotaFlats, not updated, 0.9699999999999989<br />
 USA_GJewelBelt, <b>updated</b>, 500, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
+USA_GEvoBelt, not updated, 0.3400000000000034<br />
+USA_GBypassMixed kihagyva (100%), <br />
+USA_G62WestEvo, not updated, 0.8300000000000001<br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.7699999999999996<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.8500000000000014<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.6700000000000017<br />
+USA_OwensboroRiverboatFlats, not updated, 0.7799999999999998<br />
+Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, not updated, 0.0<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees kihagyva (100%), <br />
+USA_MaineWeatherBalloon, not updated, 0.0<br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, not updated, 0.7999999999999972<br />
+USA_CelticKnot, <b>updated</b>, 388, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
