--- a/feladat.html
+++ b/feladat.html
@@ -871,3 +871,132 @@ USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.7999999999999972<br />
 USA_CelticKnot, <b>updated</b>, 388, <a href="https://www.munzee.com/map/9yzs2r3b7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticKnot.json" target="_blank">json</a><br />
+USA_STLPirateShip, not updated, 0.39000000000000057<br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.25<br />
+USA_STLPokeball, not updated, 0.6000000000000014<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, not updated, 0.0<br />
+USA_KirkwoodEvolutions6 kihagyva (100%), <br />
+USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
+USA_Woodpecker, not updated, 0.4300000000000068<br />
+USA_ZBriefcase kihagyva (100%), <br />
+USA_WinterCardinalFeather kihagyva (100%), <br />
+USA_Chickadee kihagyva (100%), <br />
+USA_FlatDogBone kihagyva (100%), <br />
+USA_NyisutterBday kihagyva (100%), <br />
+USA_Cornucopia kihagyva (100%), <br />
+USA_StLouisRobin kihagyva (100%), <br />
+USA_FriendshipFliHiBrewery kihagyva (100%), <br />
+USA_SummerTree kihagyva (100%), <br />
+USA_ZeeSpyHat kihagyva (100%), <br />
+USA_WYMM kihagyva (100%), <br />
+USA_FlatObjectAnnex, not updated, 0.0<br />
+USA_StLFlatRob, not updated, 0.0<br />
+USA_StLFlatRobFlats kihagyva (100%), <br />
+USA_CottlevillePost kihagyva (100%), <br />
+USA_DaisyChain kihagyva (100%), <br />
+USA_TowerGrovePark kihagyva (100%), <br />
+USA_PiratesCannon kihagyva (100%), <br />
+USA_MothersDayBasket kihagyva (100%), <br />
+USA_Munzee11 kihagyva (100%), <br />
+UnitedKingdom_HeartBeatz kihagyva (100%), <br />
+USA_Scooter kihagyva (100%), <br />
+USA_YanktonIceCream kihagyva (100%), <br />
+UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
+Australia_BendigoIcyPole kihagyva (100%), <br />
+USA_SouthPadreIslandKOA, not updated, 0.0<br />
+USA_HeartOfStCharles kihagyva (100%), <br />
+USA_ShawsGardenRose kihagyva (100%), <br />
+USA_WhiteCastleValentine kihagyva (100%), <br />
+USA_Ring kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
+USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
+USA_CampingAtTheLake kihagyva (100%), <br />
+UnitedKingdom_TiffyTheNewmarketTabbyCat kihagyva (100%), <br />
+USA_GentleDoctorAnimals kihagyva (100%), <br />
+USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
+USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
+USA_BreadCo kihagyva (100%), <br />
+USA_Swon kihagyva (100%), <br />
+USA_ThankYouTruckers kihagyva (100%), <br />
+USA_CherryMini kihagyva (100%), <br />
+USA_BlossomMini kihagyva (100%), <br />
+USA_MarchMini kihagyva (100%), <br />
+USA_PiDay2022 kihagyva (100%), <br />
+USA_SpringTree kihagyva (100%), <br />
+USA_HeavySmokeBBQ kihagyva (100%), <br />
+USA_BowleroLaserTag kihagyva (100%), <br />
+USA_BohrerPark kihagyva (100%), <br />
+USA_Snowflake kihagyva (100%), <br />
+USA_WebsterGrovesStatesmen kihagyva (100%), <br />
+USA_ChristmasInWebsterGrovesVirtuals kihagyva (100%), <br />
+USA_ChristmasInWebsterGrovesFlats kihagyva (100%), <br />
+USA_WinterTree kihagyva (100%), <br />
+USA_AutumnTree kihagyva (100%), <br />
+USA_ZeeOps kihagyva (100%), <br />
+USA_StPetersChess kihagyva (100%), <br />
+USA_PiratesRum kihagyva (100%), <br />
+USA_NobHillFishTank kihagyva (100%), <br />
+USA_ChristmasSleigh kihagyva (100%), <br />
+USA_StLouisChristmasStockingVirtual kihagyva (100%), <br />
+USA_StLouisChristmasStockingFlat kihagyva (100%), <br />
+USA_JimmyBeagle kihagyva (100%), <br />
+USA_PirateAxe kihagyva (100%), <br />
+USA_ShamrocksMug kihagyva (100%), <br />
+USA_Halloween kihagyva (100%), <br />
+USA_AutumnMoon kihagyva (100%), <br />
+USA_Rosesquirrel kihagyva (100%), <br />
+USA_Campfire kihagyva (100%), <br />
+USA_GiftOfLife kihagyva (100%), <br />
+USA_PirateLongsword kihagyva (100%), <br />
+USA_WarriorSpear kihagyva (100%), <br />
+USA_PizzaOnTheHill kihagyva (100%), <br />
+USA_StLouisFlamingo kihagyva (100%), <br />
+USA_PirateCrossbow kihagyva (100%), <br />
+USA_Munzee10 kihagyva (100%), <br />
+USA_SybergsShark kihagyva (100%), <br />
+USA_ChuckECheesePizza kihagyva (100%), <br />
+USA_9Mile kihagyva (100%), <br />
+USA_MothersDayFlowerPot kihagyva (100%), <br />
+USA_TurtlePark kihagyva (100%), <br />
+USA_StacyParkFlower kihagyva (100%), <br />
+USA_CottlevilleDragonfly kihagyva (100%), <br />
+USA_SchaeferParkBugs kihagyva (100%), <br />
+USA_StLouisCardinalsPart2, not updated, 0.0<br />
+USA_TattooedDog kihagyva (100%), <br />
+USA_TiemeyerPatch kihagyva (100%), <br />
+USA_CincoDeMayoTaco kihagyva (100%), <br />
+USA_OverlandCar kihagyva (100%), <br />
+USA_FriscoTrain kihagyva (100%), <br />
+USA_StLouisAirplane kihagyva (100%), <br />
+USA_PiDayPie kihagyva (100%), <br />
+USA_AfftonHorse kihagyva (100%), <br />
+USA_KirkwoodAnchor kihagyva (100%), <br />
+USA_WalpelhorstHorse kihagyva (100%), <br />
+USA_StCharlesAnchor kihagyva (100%), <br />
+USA_Birdhouse kihagyva (100%), <br />
+USA_Cardinals kihagyva (100%), <br />
+USA_FlatFriends kihagyva (100%), <br />
+USA_FlatLouInStLou kihagyva (100%), <br />
+USA_FlatLouInStLouPink, not updated, 0.0<br />
+USA_Friendship kihagyva (100%), <br />
+USA_HappyKrautMemorial kihagyva (100%), <br />
+USA_OFallonSoccer kihagyva (100%), <br />
+USA_PirateCouchPotatoPatch kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+USA_city_Georgetown, <b>updated</b>, <a href="https://www.munzee.com/map/dngce8yzz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Georgetown.json" target="_blank">json</a><br />
+----felhasználók<br />
+Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
+Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.03.24 02:01:08<br />
+összesen 3055<br />
