--- a/feladat.html
+++ b/feladat.html
@@ -415,3 +415,31 @@ USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.490000000000002<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, <b>updated</b>, 1211, <a href="https://www.munzee.com/map/u0wecspcn/14.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AppenzellerSennenhundRT.json" target="_blank">json</a><br />
+Germany_PatchworkRT, not updated, 0.060000000000002274<br />
+Germany_FlatsAppenzellerRT, not updated, 0.0<br />
+Germany_WeddingDay kihagyva (100%), <br />
+Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
+Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
+Germany_Peace, not updated, 0.0<br />
+Germany_PatchworkDusslingen, not updated, 0.0<br />
+USA_MunzeeMania2019, not updated, 0.0<br />
+USA_MOADwarfLeprechaun kihagyva (100%), <br />
+USA_MOAPenguin kihagyva (100%), <br />
+USA_MOANutcracker kihagyva (100%), <br />
+USA_IceCreamEagan kihagyva (100%), <br />
+Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
+USA_SuperChuckerShield kihagyva (100%), <br />
+USA_DogDaysOfSummer kihagyva (100%), <br />
+USA_GingerbreadMan_Edina kihagyva (100%), <br />
+USA_NEOneAlien, not updated, 0.9100000000000108<br />
+USA_ComoEvoFlowers kihagyva (100%), <br />
+USA_WitchHat, not updated, 0.0<br />
+USA_LRTEVOTrain, not updated, 0.0<br />
+USA_JackOZEEacula kihagyva (100%), <br />
+USA_Minnesota kihagyva (100%), <br />
+USA_MinnesotaMoose kihagyva (100%), <br />
+USA_ChristmasSnowman kihagyva (100%), <br />
+USA_MOAYeti kihagyva (100%), <br />
+USA_MOAFlower kihagyva (100%), <br />
+USA_MOAElectricMonster kihagyva (100%), <br />
+Lithuania_VirusBomb, <b>updated</b>, 213, <a href="https://www.munzee.com/map/u9c2h7w98/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_VirusBomb.json" target="_blank">json</a> <b>100%</b><br />
