--- a/feladat.html
+++ b/feladat.html
@@ -749,3 +749,43 @@ UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare kihagyva (100%), <br />
 Portugal_Saab9xInMadeira, <b>updated</b>, 111, <a href="https://www.munzee.com/map/etu1c7ttr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_Saab9xInMadeira.json" target="_blank">json</a> <b>100%</b><br />
+Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
+USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
+USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
+UnitedKingdom_ISpyASpyInStockport, not updated, 0.5799999999999983<br />
+USA_SpyTrain kihagyva (100%), <br />
+USA_GShiftyJewels62West, not updated, 0.0<br />
+USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
+Canada_Feb2023HeartGarden, not updated, 0.0<br />
+USA_SpyGlass kihagyva (100%), <br />
+USA_TiedUpInKnotzInRoundRock, not updated, 0.0<br />
+USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.8999999999999915<br />
+USA_EllisCreekOwl kihagyva (100%), <br />
+USA_EllisCreekOwlFlats, not updated, 0.0<br />
+USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
+USA_GardenGirl kihagyva (100%), <br />
+USA_TexasGoldenTicket kihagyva (100%), <br />
+USA_TexasGoldenTicketFlats, not updated, 0.0<br />
+USA_MarshallMallard kihagyva (100%), <br />
+USA_UncutDiamond kihagyva (100%), <br />
+USA_UncutDiamondFlats kihagyva (100%), <br />
+USA_BabyGroot kihagyva (100%), <br />
+USA_WeatherfordXmasOwl kihagyva (100%), <br />
+USA_AvocatoAvocato kihagyva (100%), <br />
+USA_AvocatoToy, not updated, 0.0<br />
+USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwl kihagyva (100%), <br />
+USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
+USA_BundtiniTrail kihagyva (100%), <br />
+USA_JewelOfAHeart kihagyva (100%), <br />
+USA_LetsTalkAbundtLove kihagyva (100%), <br />
+USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
+USA_Cowtown kihagyva (100%), <br />
+USA_VelmaCrossbow, not updated, 0.0<br />
+USA_Shaggy, not updated, 0.0<br />
+USA_MysteryMachine, not updated, 0.0<br />
+USA_FortWorthFighterJet, not updated, 0.0<br />
+USA_TCUHornedFrogs, not updated, 0.0899999999999892<br />
+USA_GeowoodstockXVIITexas, not updated, 0.0<br />
+USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
+USA_TigerKing, <b>updated</b>, 340, <a href="https://www.munzee.com/map/9vfcfhj93/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TigerKing.json" target="_blank">json</a><br />
