--- a/feladat.html
+++ b/feladat.html
@@ -992,3 +992,4 @@ USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
 USA_BuckeyesGradCap, <b>updated</b>, 162, <a href="https://www.munzee.com/map/dp5u4kbq4/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BuckeyesGradCap.json" target="_blank">json</a><br />
 Germany_SmellsLikeZeeSpiritKurtCobain, <b>updated</b>, 848, <a href="https://www.munzee.com/map/u0ws1b5wm/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SmellsLikeZeeSpiritKurtCobain.json" target="_blank">json</a><br />
+Poland_BirthdayCake, <b>updated</b>, 163, <a href="https://www.munzee.com/map/u2z5jbuze/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Poland_BirthdayCake.json" target="_blank">json</a> <b>100%</b><br />
