--- a/feladat.html
+++ b/feladat.html
@@ -1022,3 +1022,4 @@ USA_BirdhousesGoldfinch, <b>updated</b>, 88, <a href="https://www.munzee.com/map
 USA_PecanMini, <b>updated</b>, 31, <a href="https://www.munzee.com/map/9yzsdfrjc/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PecanMini.json" target="_blank">json</a> <b>100%</b><br />
 USA_AcornMini, <b>updated</b>, 33, <a href="https://www.munzee.com/map/9yzse6tf8/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AcornMini.json" target="_blank">json</a> <b>100%</b><br />
 USA_MizzouTiger, <b>updated</b>, 502, <a href="https://www.munzee.com/map/9yymdf9bz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MizzouTiger.json" target="_blank">json</a><br />
+USA_CamoHeart, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9yymdqj77/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CamoHeart.json" target="_blank">json</a><br />
